closing feature #2484 Adding avatar, username and link to profile in header

--- a/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle_de.properties
@@ -41,6 +41,7 @@ lookSilverpeasV5.reductExtend = Verkleinern / Strecken
 lookSilverpeasV5.backOffice = Verwaltung
 lookSilverpeasV5.home = Startseite
 lookSilverpeasV5.directory = Verzeichnis
+lookSilverpeasV5.userlink = View my newsfeed and profile
  
 # Connected Users
 lookSilverpeasV5.connectedUser = Anderer verbunder Benutzer
