--- a/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle_en.properties
@@ -40,6 +40,7 @@ lookSilverpeasV5.reductExtend = Collapse/Expand
 lookSilverpeasV5.backOffice = Back Office
 lookSilverpeasV5.home = Home
 lookSilverpeasV5.directory = Directory
+lookSilverpeasV5.userlink = View my newsfeed and profile
 
 # Connected Users
 lookSilverpeasV5.connectedUser = connected user
