Feature #2095 A JSP is now provided to define a predefined classification on the PdC for contents in a whole component instance or for a node in the component instance. Positions on the PdC can be added into a predefined classification (empty or an existing one)

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -246,6 +246,7 @@ GML.PDCParam = Verwendung des KP parametrisieren
 GML.PDCNewPosition = Eine neue Position erstellen
 GML.PDCValidatePosition = Validate diese Position
 GML.PDCDeletePosition = L\u00f6schen Sie die Position
+GML.PDCPredefinePositions = Definieren Sie eine Einstufung auf der KP
 
 # Contr\u00f4les d'acc\u00e8s
 GML.ForbiddenAccessContent = Sie verf\u00fcgen nicht \u00fcber gen\u00fcgende Rechte, um zur gew&#x00fc;nschten Information Zugang zu erhalten!
