Feature #2095 Now the REST-based web service in charge of predefined classifications accepts directly update, creation and getting of predefined classifications associated with nodes or component instances. Some UI characteristics are refined in the rendering of positions and predefined classifications coming from parent node

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
@@ -93,6 +93,8 @@ pdcPeas.addPosition                    = Position hinzuf\u00fcgen
 pdcPeas.editPosition                   = Position \u00e4ndern
 pdcPeas.deletePosition                 = Position l\u00f6schen
 pdcPeas.deletedPosition                = Position gel\u00f6scht
+pdcPeas.saveThePosition                = Speichern Sie die Position
+pdcPeas.inheritedPositions             = Positionen des \u00fcbergeordneten Themas
 
 pdcPeas.path                           = Pfad
 pdcPeas.variant                        = Variante
