--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
@@ -91,6 +91,8 @@ pdcPeas.addPosition                    = Add a position
 pdcPeas.editPosition                   = Edit the position
 pdcPeas.deletePosition                 = Delete the position
 pdcPeas.deletedPosition                = Position deleted
+pdcPeas.saveThePosition                = Save the position
+pdcPeas.inheritedPositions             = Positions from the parent topic
 
 pdcPeas.path                           = Path
 pdcPeas.variant                        = Variant
