Feature #2095 Update the texts used in the predefinition of a classification on the PdC. Change the style of the button with which a new position on the PdC is added when predefining a classification or publishing a new content. Add a message to inform the user he can explicitly predefine a classification on the PdC for a given node or he can use the predefined classification of the parent node

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
@@ -248,7 +248,7 @@ GML.PDCParam = Param\u00e9trer l'utilisation du PDC
 GML.PDCNewPosition = Ajouter une position...
 GML.PDCValidatePosition = Valider cette position
 GML.PDCDeletePosition = Supprimer la position
-GML.PDCPredefinePositions = Pr\u00e9d\u00e9finir un classement sur le PDC
+GML.PDCPredefinePositions = D\u00e9finir le classement par d\u00e9faut
 
 # Contr\u00f4les d'acc\u00e8s
 GML.ForbiddenAccessContent = Vous n'avez pas les droits suffisants pour acc\u00e9der \u00e0 l'information d\u00e9sir\u00e9e !
