--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
@@ -91,7 +91,7 @@ pdcPeas.addPosition                    = Add a position
 pdcPeas.editPosition                   = Edit the position
 pdcPeas.deletePosition                 = Delete the position
 pdcPeas.deletedPosition                = Position deleted
-pdcPeas.saveThePosition                = Save the position
+pdcPeas.saveThePosition                = Save the above position
 pdcPeas.inheritedPositions             = Positions from the parent topic
 
 pdcPeas.path                           = Path
@@ -300,6 +300,7 @@ external.search.server.2.label=My external server 2
 pdcPeas.MustContainsMandatoryAxis=must be listed on the axes required
 pdcPeas.MustBeClassified = The classification is mandatory to create a contribution.<br />Please set a position with the mandatory axes.
 pdcPeas.theContent=This contribution
+pdcPeas.CanDoAPredefineClassification = You can set a default classification for publications of this theme. <br /> If this theme will use the classification defined for the parent theme.
 # Label linked to pdcPeasSettings.properties : typed search
 search.type.1.label= Publications
 search.type.2.label= Events
