Closing feature #2275 : adding a new entry in thee tools tab for reindexation

--- a/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_de.properties
@@ -46,6 +46,7 @@ JMAP = Wartung
 JST = SilverTrace-Konsole
 JTD = Formulare
 portlets = Portlets
+reindexation=Reindexation
 JAB = About...
 
 JKM1 = Achsen
