--- a/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_en.properties
@@ -41,6 +41,8 @@ JSP = Search
 JMAP = Maintenance
 JST = SilverTrace Console
 JTD = Templates
+portlets=Portlets
+reindexation=Reindexation
 JAB = About...
 
 JKM1 = Axis
