Feature #2095 Indicates in the message about classification inheritance between nodes the name of the node concerned by the predefined classification

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
@@ -300,7 +300,7 @@ external.search.server.2.label=My external server 2
 pdcPeas.MustContainsMandatoryAxis=must be listed on the axes required
 pdcPeas.MustBeClassified = The classification is mandatory to create a contribution.<br />Please set a position with the mandatory axes.
 pdcPeas.theContent=This contribution
-pdcPeas.CanDoAPredefineClassification = You can set a default classification for publications of this theme. <br /> If this theme will use the classification defined for the parent theme.
+pdcPeas.CanDoAPredefineClassification = You can set a default classification for publications of the topic <strong>{0}</strong>. <br /> If this topic will use the classification defined for the parent topic.
 # Label linked to pdcPeasSettings.properties : typed search
 search.type.1.label= Publications
 search.type.2.label= Events
