--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
@@ -288,7 +288,7 @@ pdcPeas.error= Fehler
 pdcPeas.MustContainsMandatoryAxis=must be listed on the axes required
 pdcPeas.MustBeClassified = The classification is mandatory to create a contribution.<br />Please set a position with the mandatory axes.
 pdcPeas.theContent=This contribution
-pdcPeas.CanDoAPredefineClassification = Sie k\u00f6nnen eine Standard-Klassifikation f\u00fcr Publikationen zu diesem Thema. <br /> Wenn dieses Thema wird die Klassifizierung f\u00fcr das \u00fcbergeordnete Thema definiert sind.
+pdcPeas.CanDoAPredefineClassification = Sie k\u00f6nnen eine Standard-Klassifikation f\u00fcr Publikationen zu diesem Thema <strong>{0}</strong>. <br /> Wenn dieses Thema wird die Klassifizierung f\u00fcr das \u00fcbergeordnete Thema definiert sind.
 external.search.server.1.label=Mein Externer Server 1
 external.search.server.2.label=Mein Externer Server 2
 
