closing feature #2632 adding parameters "usersInInstanceOnly" and "roles" on fields "user", "multipleUser" and "group"

--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
@@ -80,11 +80,11 @@ templateDesigner.newFieldFile = Ein \u0027Datei\u0027-Feld hinzuf\u00fcgen
 templateDesigner.newFieldImage = Ein \u0027Bild\u0027-Feld hinzuf\u00fcgen
 templateDesigner.newFieldVideo = Ein \u0027Video\u0027-Feld hinzuf\u00fcgen
 templateDesigner.newFieldUser = Ein \u0027Benutzer\u0027-Feld hinzuf\u00fcgen
+templateDesigner.newFieldMultipleUsers = Add a 'Users' field
 templateDesigner.newFieldGroup = Ein \u0027Gruppe\u0027-Feld hinzuf\u00fcgen
 templateDesigner.newFieldLdap = Ein Feld \u0027LDAP-Connector\u0027 hinzuf\u00fcgen
 templateDesigner.newFieldAccessPath = Ein Feld \u0027Standort\u0027 hinzuf\u00fcgen
 templateDesigner.newFieldJdbc = Ein Feld \u0027JDBC Connector\u0027 hinzuf\u00fcgen
-
 templateDesigner.newFieldPdc = Ein \u0027KP\u0027-Feld hinzuf\u00fcgen
 templateDesigner.newFieldSequence = Ein \u0027Sequenz\u0027-Feld hinzuf\u00fcgen
 
@@ -93,8 +93,8 @@ templateDesigner.operations = Operationen
 templateDesigner.up = 	Nach oben
 templateDesigner.down = Nach unten
 
-templateDesigner.operations = Operationen
-templateDesigner.available = Verf\u00fcgbar
+templateDesigner.displayer.roles = Role(s)
+templateDesigner.displayer.usedInstanceOnly = Limited to the application
 
 templateDesigner.displayer.image.maxWidth = Max Breite
 templateDesigner.displayer.image.maxHeight = Max H\u00f6he
