--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
@@ -79,6 +79,7 @@ templateDesigner.newFieldFile = Add a 'File' field
 templateDesigner.newFieldImage = Add an 'Image' field
 templateDesigner.newFieldVideo = Add a 'Video' field
 templateDesigner.newFieldUser = Add a 'User' field
+templateDesigner.newFieldMultipleUsers = Add a 'Users' field
 templateDesigner.newFieldGroup = Add a 'Group' field
 templateDesigner.newFieldLdap = Add a 'LDAP connector' field
 templateDesigner.newFieldAccessPath = Add an 'Access path' field
@@ -90,6 +91,9 @@ templateDesigner.displayer = Displayer
 templateDesigner.operations = Operations
 templateDesigner.up = Up
 templateDesigner.down = Down
+
+templateDesigner.displayer.roles = Role(s)
+templateDesigner.displayer.usedInstanceOnly = Limited to the application
 
 templateDesigner.displayer.image.maxWidth = Max width
 templateDesigner.displayer.image.maxHeight = Max height
