--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
@@ -78,6 +78,7 @@ templateDesigner.newFieldFile = Ajouter un champ 'Fichier'
 templateDesigner.newFieldImage = Ajouter un champ 'Image'
 templateDesigner.newFieldVideo = Ajouter un champ 'Vid\u00e9o'
 templateDesigner.newFieldUser = Ajouter un champ 'Utilisateur'
+templateDesigner.newFieldMultipleUsers = Ajouter un champ 'Utilisateurs'
 templateDesigner.newFieldGroup = Ajouter un champ 'Groupe'
 templateDesigner.newFieldLdap = Ajouter un champ 'Connecteur LDAP'
 templateDesigner.newFieldAccessPath = Ajouter un champ 'Emplacement'
@@ -89,6 +90,9 @@ templateDesigner.displayer = Afficheur
 templateDesigner.operations = Op\u00e9rations
 templateDesigner.up = Monter
 templateDesigner.down = Descendre
+
+templateDesigner.displayer.roles = R\u00d4le(s)
+templateDesigner.displayer.usedInstanceOnly = Limit\u00e9 \u00e0 l'application
 
 templateDesigner.displayer.image.maxWidth = Largeur max
 templateDesigner.displayer.image.maxHeight = Hauteur max
