closing feature #2275 i18n of messages and using operations

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_de.properties
@@ -138,3 +138,25 @@ connectedUsers = andere Benutzer angeschlossen
 2 = Technisches Problem
 3 = Ihre Sitzung ist abgelaufen
 4 = Benutzer-Abschaltung
+
+admin.reindex = Reindexing
+admin.reindex.help = For an optimal reindexing, the directory of the element to be reindexed must be deleted manually into the directory SILVERPEAS_DATA_HOME/index.
+admin.reindex.inprogress = Reindexing launched in the background!
+admin.reindex.op.all = Reindex all
+admin.reindex.op.spaces = Reindex spaces
+admin.reindex.op.users = Reindex users
+admin.reindex.op.groups = Reindex groups
+admin.reindex.op.pdc = Reindex taxonomy
+admin.reindex.op.todos = Reindex todos from personal spaces
+admin.reindex.op.agendas = Reindex diaries from personal spaces
+
+admin.reindex.js.warn = You are about to reindex 
+admin.reindex.js.warn.compo = an application
+admin.reindex.js.warn.space = a space
+admin.reindex.js.warn.perso = an application of personal spaces
+admin.reindex.js.warn.spaces = all spaces
+admin.reindex.js.warn.users = all users
+admin.reindex.js.warn.groups = all groups
+admin.reindex.js.warn.pdc = taxonomy
+admin.reindex.js.warn.all = all the platform
+admin.reindex.js.warn.confirm = Are you sure to do this?
