closing feature #2495 Changing English translations in back office...

--- a/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_en.properties
@@ -29,20 +29,20 @@ JMP.help = Help
 JMP.tools = Tools
 JMP.clipboard = Clipboard
 
-JD = Designer
-JKM = Classification scheme
+JD = Users & workspaces
+JKM = Taxonomy
 JSTAT = Statistics
 JTOOLS = Tools
 
 JDP = Users & groups
-JSPP = Workspace
-JRP = Identity
+JSPP = Workspaces & applications
+JRP = Profile
 JSP = Search
 JMAP = Maintenance
-JST = SilverTrace Console
-JTD = Templates
+JST = Silvertrace console
+JTD = Forms
 portlets=Portlets
-reindexation=Reindexation
+reindexation=Reindexing
 JAB = About...
 
 JKM1 = Axis
@@ -50,7 +50,7 @@ JKM2 = Synonyms
 JSTAT1 = Connections
 JSTAT2 = Entries
 JSTAT3 = Volumes
-JSTAT4 = Classification scheme
+JSTAT4 = Taxonomy
 
 JBKP = SaveRestore
 
