--- a/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_fr.properties
@@ -29,20 +29,20 @@ JMP.help = Aide
 JMP.tools = Outils
 JMP.clipboard = Presse-Papier
 
-JD = Administration
+JD = Utilisateurs & espaces
 JKM = Plan de Classement
 JSTAT = Statistiques
 JTOOLS = Outils
 
 JDP = Utilisateurs & groupes
-JSPP = Gestion d'espaces
+JSPP = Espaces & applications
 JRP = Profil
 JSP = Recherche
 JMAP = Maintenance
-JST = Console SilverTrace
+JST = Console Silvertrace
 JTD = Formulaires
 portlets = Portlets
-reindexation=Reindexation
+reindexation=Réindexation
 JAB = A propos...
 
 JKM1 = Axes
