--- a/config-core/src/main/config/properties/com/silverpeas/jobOrganizationPeas/multilang/jobOrganizationPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobOrganizationPeas/multilang/jobOrganizationPeasBundle_en.properties
@@ -22,7 +22,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 JOP.pseudoSpace = Administration
-JOP.pseudoPeas = Silverpeas Organisation
+JOP.pseudoPeas = Silverpeas Organization
 JOP.noSelection = No user or group selected
 JOP.select = Select another user or group
 JOP.parentGroup = Parent group
@@ -31,5 +31,5 @@ JOP.spaces = Manage spaces
 JOP.profiles = Profile membership
 JOP.profile = Profile
 JOP.instance = Instance
-PDCSubscription.show = Show user subscriptions for Classification scheme 
+PDCSubscription.show = Show user subscriptions for taxonomy 
 JOP.silverPassword = Silverpeas password
