--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
@@ -42,7 +42,7 @@ JSPP.SpaceTemplate = Space templates
 JSPP.NoTemplate = Empty space
 JSPP.UPSpaceTemplateProfile = Select groups/users for the profile
 
-JSPP.welcome =  Welcome to the Manage Workspaces module 
+JSPP.welcome =  Welcome in the workspaces administration module 
 
 JSPP.maintenanceTout = Silverpeas is in Maintenance mode!
 JSPP.maintenance = Maintenance mode:
