--- a/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle_en.properties
@@ -24,7 +24,7 @@
 lookSilverpeasV5.login	= Login
 lookSilverpeasV5.logout	= Logout
 lookSilverpeasV5.password = Password
-lookSilverpeasV5.pdc	= Classification scheme
+lookSilverpeasV5.pdc	= Taxonomy
 lookSilverpeasV5.domain = Domain
 lookSilverpeasV5.anonymousUnauthorized = You do not have access rights to this private document.<br/>Please login...
 lookSilverpeasV5.AdvancedSearch = Advanced
