--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -94,7 +94,7 @@ GML.insertHere						= Insert here
 GML.jobPeas						= Application
 
 GML.keyWords						= Keywords
-GML.kmmanager                   = Classification scheme Manager
+GML.kmmanager                   = Taxonomy manager
 
 GML.label						= Name
 GML.lastName        = Last name
