closing feature #2651 Form designer now supports the "time" field

--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
@@ -74,6 +74,7 @@ templateDesigner.newFieldCheckbox = Ajouter un champ 'Case \u00e0 cocher'
 templateDesigner.newFieldRadio = Ajouter un champ 'Bouton radio'
 templateDesigner.newFieldURL = Ajouter un champ 'URL'
 templateDesigner.newFieldDate = Ajouter un champ 'Date'
+templateDesigner.newFieldTime = Ajouter un champ 'Heure'
 templateDesigner.newFieldFile = Ajouter un champ 'Fichier'
 templateDesigner.newFieldImage = Ajouter un champ 'Image'
 templateDesigner.newFieldVideo = Ajouter un champ 'Vid\u00e9o'
@@ -93,6 +94,7 @@ templateDesigner.down = Descendre
 
 templateDesigner.displayer.roles = R\u00d4le(s)
 templateDesigner.displayer.usedInstanceOnly = Limit\u00e9 \u00e0 l'application
+templateDesigner.displayer.default = Valeur par d\u00e9faut
 
 templateDesigner.displayer.image.maxWidth = Largeur max
 templateDesigner.displayer.image.maxHeight = Hauteur max
