--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
@@ -76,6 +76,7 @@ templateDesigner.newFieldCheckbox = Ein \u0027Kontrollk\u00e4stchen\u0027 hinzuf
 templateDesigner.newFieldRadio = Eine \u0027Optionsschaltfl\u00e4che\u0027 hinzuf\u00fcgen
 templateDesigner.newFieldURL = Ein \u0027URL\u0027-Feld hinzuf\u00fcgen
 templateDesigner.newFieldDate = Ein \u0027Datum\u0027-Feld hinzuf\u00fcgen
+templateDesigner.newFieldTime = Add a 'Time' field
 templateDesigner.newFieldFile = Ein \u0027Datei\u0027-Feld hinzuf\u00fcgen
 templateDesigner.newFieldImage = Ein \u0027Bild\u0027-Feld hinzuf\u00fcgen
 templateDesigner.newFieldVideo = Ein \u0027Video\u0027-Feld hinzuf\u00fcgen
@@ -95,6 +96,7 @@ templateDesigner.down = Nach unten
 
 templateDesigner.displayer.roles = Role(s)
 templateDesigner.displayer.usedInstanceOnly = Limited to the application
+templateDesigner.displayer.default = Default value
 
 templateDesigner.displayer.image.maxWidth = Max Breite
 templateDesigner.displayer.image.maxHeight = Max H\u00f6he
