--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
@@ -75,6 +75,7 @@ templateDesigner.newFieldCheckbox = Add a 'Checkbox' field
 templateDesigner.newFieldRadio = Add a 'Radio button' field
 templateDesigner.newFieldURL = Add an 'URL' field
 templateDesigner.newFieldDate = Add a 'Date' field
+templateDesigner.newFieldTime = Add a 'Time' field
 templateDesigner.newFieldFile = Add a 'File' field
 templateDesigner.newFieldImage = Add an 'Image' field
 templateDesigner.newFieldVideo = Add a 'Video' field
@@ -94,6 +95,7 @@ templateDesigner.down = Down
 
 templateDesigner.displayer.roles = Role(s)
 templateDesigner.displayer.usedInstanceOnly = Limited to the application
+templateDesigner.displayer.default = Default value
 
 templateDesigner.displayer.image.maxWidth = Max width
 templateDesigner.displayer.image.maxHeight = Max height
