closing feature #2452 Field name is now checked during creation

--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
@@ -61,6 +61,8 @@ templateDesigner.passwordDB = Passwort f\u00fcr die Verbindung zur Datenbank
 templateDesigner.query = SQL-Abfrage
 templateDesigner.suggestions = Vorschl\u00e4ge
 
+templateDesigner.js.incorrectName = must not be called 'name'. Use a more meaningful name.
+
 templateDesigner.addOption = Diese Option hinzuf\u00fcgen
 templateDesigner.updateOption = Diese Option \u00e4ndern
 templateDesigner.deleteOption = Diese Option l\u00f6schen
