--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
@@ -59,6 +59,7 @@ templateDesigner.passwordDB = Password connection to the database
 templateDesigner.query = SQL search request
 templateDesigner.suggestions = Suggestions
 
+templateDesigner.js.incorrectName = must not be called 'name'. Use a more meaningful name.
 
 templateDesigner.addOption = Add this option
 templateDesigner.updateOption = Modify this option
