--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
@@ -44,7 +44,7 @@ templateDesigner.host = Nom du serveur h\u00f4te LDAP
 templateDesigner.port = Num\u00e9ro de port
 templateDesigner.version = Num\u00e9ro de version du protocole LDAP
 templateDesigner.baseDN = Cha\u00eene de connexion LDAP
-templateDesigner.password = Mot de passe d'autehntification LDAP
+templateDesigner.password = Mot de passe d'authentification LDAP
 templateDesigner.searchBase = Requ\u00eate LDAP de recherche
 templateDesigner.searchScope = Niveau de profondeur de recherche
 templateDesigner.searchFilter = Filtre de recherche
@@ -58,6 +58,8 @@ templateDesigner.login = Login de connexion \u00e0 la base
 templateDesigner.passwordDB = Mot de passe de connexion \u00e0 la base
 templateDesigner.query = Requ\u00eate SQL de recherche
 templateDesigner.suggestions = Suggestions
+
+templateDesigner.js.incorrectName = ne doit pas se nommer 'name'. Utilisez un nom plus explicite.
 
 templateDesigner.addOption = Ajouter cette option
 templateDesigner.updateOption = Modifier cette option
