Feature #2096 The JQuery plugin for the PdC classification is modified to support multiple use of the plugin in a single web page. The modifiable attribute of a predefined classification (used in the classification validation when publishing new contents) is now taken into account by the REST-based web service

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -247,6 +247,8 @@ GML.PDCNewPosition = Eine neue Position erstellen
 GML.PDCValidatePosition = Validate diese Position
 GML.PDCDeletePosition = L\u00f6schen Sie die Position
 GML.PDCPredefinePositions = Definieren Sie die Standard-Klassifikation
+GML.PDCPositionsPredefinition = Einstellen der Standard-Klassifikation
+
 
 # Contr\u00f4les d'acc\u00e8s
 GML.ForbiddenAccessContent = Sie verf\u00fcgen nicht \u00fcber gen\u00fcgende Rechte, um zur gew&#x00fc;nschten Information Zugang zu erhalten!
@@ -309,3 +311,5 @@ GML.linkToVisit = Hyperlink auf Ihren Besuch
 GML.Show = Zeigen:
 
 GML.selectAValue = Bitte w\u00e4hlen Sie einen Wert
+
+GML.Validation = Best\u00e4tigung
