--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -247,6 +247,7 @@ GML.PDCNewPosition = Add a new position
 GML.PDCValidatePosition = Validate this position
 GML.PDCDeletePosition = Delete the position
 GML.PDCPredefinePositions = Define the default classification
+GML.PDCPositionsPredefinition = Settings of the default classification
 
 # Access Control
 GML.ForbiddenAccessContent = You are not allowed to access this information!
@@ -313,3 +314,5 @@ GML.linkToVisit = Hyperlink at visiting
 GML.Show = Show:
 
 GML.selectAValue = Please select a value
+
+GML.Validation = Validation
