closing feature #2676 Now, several actions can be "creation" action.

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -227,7 +227,7 @@ GML.mois10 = November
 GML.mois11 = December
 
 # Controle JavaScript
-GML.ThisFormContains = This forms contains
+GML.ThisFormContains = This form contains 
 GML.MustBeFilled = must be filled
 GML.MustContainsNumber = must contain a number
 GML.MustContainsFloat = must contain a float
