closing partially feature #2098 Adding new form field "explorer" This new field is supported by form and workflow designers

--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
@@ -90,6 +90,7 @@ templateDesigner.newFieldAccessPath = Ein Feld \u0027Standort\u0027 hinzuf\u00fc
 templateDesigner.newFieldJdbc = Ein Feld \u0027JDBC Connector\u0027 hinzuf\u00fcgen
 templateDesigner.newFieldPdc = Ein \u0027KP\u0027-Feld hinzuf\u00fcgen
 templateDesigner.newFieldSequence = Ein \u0027Sequenz\u0027-Feld hinzuf\u00fcgen
+templateDesigner.newFieldExplorer = Add an 'ECM explorer' field
 
 templateDesigner.displayer = Anzeiger
 templateDesigner.operations = Operationen
@@ -116,3 +117,5 @@ templateDesigner.displayer.sequence.startValue = Startwert
 templateDesigner.displayer.sequence.valueCreation = Wert Erzeugung
 templateDesigner.displayer.sequence.reuseAvailableValues = Wiederverwendung der verf\u00fcgbaren Werte
 templateDesigner.displayer.sequence.alwaysIncrement = Immer Inkrementieren
+
+templateDesigner.displayer.explorer.scope = Identifier(s)
