--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
@@ -88,6 +88,7 @@ templateDesigner.newFieldAccessPath = Add an 'Access path' field
 templateDesigner.newFieldJdbc = Add a 'JDBC connector' field
 templateDesigner.newFieldPdc = Add a 'PDC' field
 templateDesigner.newFieldSequence = Add a 'Sequence' field
+templateDesigner.newFieldExplorer = Add an 'ECM explorer' field
 
 templateDesigner.displayer = Displayer
 templateDesigner.operations = Operations
@@ -114,3 +115,5 @@ templateDesigner.displayer.sequence.startValue = Start value
 templateDesigner.displayer.sequence.valueCreation = Value creation
 templateDesigner.displayer.sequence.reuseAvailableValues = Reuse available values
 templateDesigner.displayer.sequence.alwaysIncrement = Always increment
+
+templateDesigner.displayer.explorer.scope = Identifier(s)
