--- a/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_de.properties
@@ -100,3 +100,5 @@ White = Weiss
 
 form.Extra = Weitere Informationen
 form.field.file.toolong = muss eine Datei sein, dessen Name nicht mehr als 100 Zeichen enthalten darf.
+
+field.explorer.browse = Browse...
