--- a/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_en.properties
@@ -101,3 +101,5 @@ White = White
 
 form.Extra = Additional information
 form.field.file.toolong = must be a file whose name must not exceed 100 characters.
+
+field.explorer.browse = Browse...
