--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
@@ -88,6 +88,7 @@ templateDesigner.newFieldAccessPath = Ajouter un champ 'Emplacement'
 templateDesigner.newFieldJdbc = Ajouter un champ 'Connecteur JDBC'
 templateDesigner.newFieldPdc = Ajouter un champ 'PDC'
 templateDesigner.newFieldSequence = Ajouter un champ 'S\u00e9quence'
+templateDesigner.newFieldExplorer = Ajouter un champ 'Explorateur GED'
 
 templateDesigner.displayer = Afficheur
 templateDesigner.operations = Op\u00e9rations
@@ -114,3 +115,5 @@ templateDesigner.displayer.sequence.startValue = Valeur de d\u00e9part
 templateDesigner.displayer.sequence.valueCreation = Cr\u00e9ation de valeur
 templateDesigner.displayer.sequence.reuseAvailableValues = R\u00e9utiliser les valeurs disponibles
 templateDesigner.displayer.sequence.alwaysIncrement = Toujours incr\u00e9menter
+
+templateDesigner.displayer.explorer.scope = Identifiant(s)
