Add a new translation (GML.At)

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -303,6 +303,7 @@ GML.mandatory = Obligatorisch
 GML.and = und
 GML.to = bis
 GML.at = um
+GML.At = Um
 GML.From = Aus
 
 GML.linkToVisit = Hyperlink auf Ihren Besuch
