--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -308,6 +308,7 @@ GML.operations.setupComponent = Setup this application
 
 GML.to = to
 GML.at = at
+GML.At = At
 GML.From = From
 GML.linkToVisit = Hyperlink at visiting
 GML.Show = Show:
