--- a/lib-core/src/test/resources/com/silverpeas/util/multilang/i18n_fr.properties
+++ b/lib-core/src/test/resources/com/silverpeas/util/multilang/i18n_fr.properties
@@ -21,6 +21,6 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-language_fr = Français
+language_fr = Fran\u00E7ais
 language_en = Anglais
 language_de = Allemand
