closing feature #2410 Adding support of displaying size in Go and To

--- a/config-core/src/main/config/properties/com/silverpeas/util/multilang/util_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/util/multilang/util_en.properties
@@ -24,9 +24,12 @@
 o = bytes
 ko = Kb
 mo = Mb
+go = Gb
+to = Tb
 util.ligne = - Line
 util.colonne = Column
 util.errorType = Type error: 
+util.errorMandatory = Mandatory value : 
 util.valeur = Value
 util.type = Expected type
 util.colonnesAttendues = Columns of
