adding message to explicit role "space manager"...

--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_de.properties
@@ -105,6 +105,8 @@ JSPP.publisher = Editor
 JSPP.writer = Schreiber
 JSPP.reader = Leser
 
+JSPP.Manager.help = The role "Space managers" only allows to delegate the administration of this space to any user.<br/>By default, a "space manager" has no rights to the applications of space.<br/>Be careful to not confuse this role with "Administrators" which applies well to applications of space.
+
 # Gestion de l'ordre
 JSPP.SpaceOrder = Verschiebung des Bereichs
 JSPP.SpacePlace = Verschiebung vor dem Bereich
