--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
@@ -98,11 +98,13 @@ JSPP.MessageSuppressionInstanceBegin = Do you really want to delete this applica
 JSPP.MessageSuppressionInstanceEnd = <--\\n
 
 # onglets roles
-JSPP.Manager = Space Managers
+JSPP.Manager = Space managers
 JSPP.admin = Administrators
 JSPP.publisher = Publishers
 JSPP.writer = Writers
 JSPP.reader = Readers
+
+JSPP.Manager.help = The role "Space managers" only allows to delegate the administration of this space to any user.<br/>By default, a "space manager" has no rights to the applications of space.<br/>Be careful to not confuse this role with "Administrators" which applies well to applications of space.
 
 # Gestion de l'ordre
 JSPP.SpaceOrder = Move space 
