--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_fr.properties
@@ -104,6 +104,8 @@ JSPP.publisher = Publieurs
 JSPP.writer = R\u00e9dacteurs
 JSPP.reader = Lecteurs
 
+JSPP.Manager.help = Le r\u00f4le "Manager d'espace" permet uniquement de d\u00e9l\u00e9guer l'administration de cet espace \u00e0 n'importe quel utilisateur.<br/>Par d\u00e9faut, un "manager d'espace" n'a aucun droit sur les applications de l'espace.<br/>Attention donc de ne pas confondre ce r\u00f4le avec celui de "Gestionnaire" qui s'applique bien aux applications de l'espace.
+
 #  Gestion de l'ordre
 JSPP.SpaceOrder = D\u00e9placer l'espace
 JSPP.SpacePlace = D\u00e9placement avant l'espace
