on feature #2714, export of publications can be done according to different modes

--- a/config-core/src/main/config/properties/com/silverpeas/importExportPeas/multilang/importExportPeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/importExportPeas/multilang/importExportPeasBundle_de.properties
@@ -72,3 +72,7 @@ importExportPeas.File = Herunterzuladende Datei
 
 importExportPeas.InProgress = Export wird ausgef\u00fchrt...
 
+importExportPeas.export.what			= What do you export?
+importExportPeas.export.mode.filesOnly	= Files only
+importExportPeas.export.mode.pubsOnly	= Publications and attached files
+importExportPeas.export.mode.full		= Full export
