--- a/config-core/src/main/config/properties/com/silverpeas/importExportPeas/multilang/importExportPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/importExportPeas/multilang/importExportPeasBundle_en.properties
@@ -66,3 +66,8 @@ importExportPeas.ExportDuration			= Duration of export
 importExportPeas.FileSize				= File size to download
 importExportPeas.File					= File to download
 importExportPeas.InProgress				= Export in progress...
+
+importExportPeas.export.what			= What do you export?
+importExportPeas.export.mode.filesOnly	= Files only
+importExportPeas.export.mode.pubsOnly	= Publications and attached files
+importExportPeas.export.mode.full		= Full export
