--- a/config-core/src/main/config/properties/com/silverpeas/importExportPeas/multilang/importExportPeasBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/importExportPeas/multilang/importExportPeasBundle_fr.properties
@@ -71,3 +71,7 @@ importExportPeas.File					= Fichier à télécharger
 
 importExportPeas.InProgress				= Exportation en cours...
 
+importExportPeas.export.what			= Que souhaitez-vous exporter ?
+importExportPeas.export.mode.filesOnly	= Fichiers seulement
+importExportPeas.export.mode.pubsOnly	= Publications et fichiers joints
+importExportPeas.export.mode.full		= Export complet
