closing feature #2713, Notify user by email and add a confirm input type text

--- a/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_de.properties
@@ -58,6 +58,7 @@ JDP.missingFieldStart = Das Feld '
 JDP.missingFieldEnd = ' ist obligatorisch
 JDP.minLength = ' muss mindestens enthalten
 JDP.noSpaces = ' darf keinen Zwischenraum enthalten
+JDP.confirmPwdError = Diese Passworter stimmen nicht uberein.
 
 JDP.name = Name
 JDP.synchroRule = Synchronisationsregel
@@ -120,3 +121,6 @@ JDP.fieldSyntax = Suchsyntax
 JDP.fieldSyntaxContent = M\u00f6glichkeit die K\u00fcrzung * zu benutzen
 JDP.importAll = Alle Benutzer importieren
 JDP.importSelected = Ausgew\u00e4hlte Benutzer importieren
+
+JDP.sendEmail = Send account parameters by email :
+JDP.createAccountNotifTitle = Account parameters
