--- a/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_en.properties
@@ -57,6 +57,7 @@ JDP.missingFieldStart = The field '
 JDP.missingFieldEnd = ' is missing
 JDP.minLength = ' must contain at least
 JDP.noSpaces = ' must not contain any spaces
+JDP.confirmPwdError = These passwords don't match.
 
 JDP.name = Name
 JDP.synchroRule = Synchronization rule
@@ -120,3 +121,6 @@ JDP.fieldSyntax = Search syntax
 JDP.fieldSyntaxContent = You can use the joker *
 JDP.importAll = Import all the users
 JDP.importSelected = Import the selected users
+
+JDP.sendEmail = Send account parameters by email :
+JDP.createAccountNotifTitle = Silverpeas - Account parameters
