--- a/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_fr.properties
@@ -57,6 +57,7 @@ JDP.missingFieldStart = Le champ '
 JDP.missingFieldEnd = ' est obligatoire
 JDP.minLength = ' doit contenir au moins
 JDP.noSpaces = ' ne doit pas contenir d'espace
+JDP.confirmPwdError = Les mots de passe ne correspondent pas.
 
 JDP.name=Nom
 JDP.synchroRule = R\u00E8gle de synchronisation
@@ -120,4 +121,5 @@ JDP.fieldSyntaxContent = Possibilit\u00E9 d'utiliser la troncature *
 JDP.importAll = Importer tous les utilisateurs
 JDP.importSelected = Importer les utilisateurs s\u00E9lectionn\u00E9s
 
-
+JDP.sendEmail = Envoyer les param\u00E8tres de connexion par email :
+JDP.createAccountNotifTitle = Silverpeas - Identifiant de votre compte
