--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -127,7 +127,8 @@ GML.operations						= Operationen
 GML.organization					= Organisationen
 GML.order					        = Reihenfolge
 
-GML.password 						= Passwort
+GML.password 					= Passwort
+GML.passwordAgain 				= Bestatigen Sie das Passwort
 GML.paste						= Einf\u00fcgen
 GML.path						= Speicherort
 GML.phoneNumber 					= Telefon
