--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -127,20 +127,21 @@ GML.operation						= Operation
 GML.organization					= Organizations
 GML.order					        = Order
 
-GML.password 						= Password
+GML.password 					= Password
+GML.passwordAgain 				= Confirm the password
 GML.paste						= Paste
 GML.path						= Location
-GML.phoneNumber 					= Phone
-GML.position 						= Position
+GML.phoneNumber 				= Phone
+GML.position 					= Position
 GML.public 						= Public
-GML.preview					        = Preview
-GML.previous						= Previous
+GML.preview					    = Preview
+GML.previous					= Previous
 GML.print						= Print
-GML.priority 						= Priority
-GML.privateFS 						= Private
-GML.privateMS 						= Private
-GML.publication						= Publication
-GML.publications					= Publications
+GML.priority 					= Priority
+GML.privateFS 					= Private
+GML.privateMS 					= Private
+GML.publication					= Publication
+GML.publications				= Publications
 GML.publish						= Publish
 
 GML.restore						= Restore
