--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
@@ -129,6 +129,7 @@ GML.organization				= Organisations
 GML.order					    = Ordre
 
 GML.password 					= Mot de passe
+GML.passwordAgain 				= Confirmez le mot de passe
 GML.paste						= Coller
 GML.path						= Emplacement
 GML.phoneNumber 				= T\u00e9l\u00e9phone
