--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_de.properties
@@ -175,3 +175,4 @@ JSPP.parameters = Einstellungen
   	  	 
 JSPP.SpaceHomepage.URL.help = Mehrere Werte sind f\u00fcr das <b>URL</b>-Feld m\u00f6glich: <ul><li>Absolut Pfad. Beispiel: http://www.google.com</li><li>Interne Adresse. Beispiel: /admin/jsp/page.jsp (Kontext nicht angeben /silverpeas)</li><li>Interne Adresse zu einer anderen Web-Anwendung. Beispiel: <b>$</b>/weblib/pages/page.jsp (Beginnen mit $/<nom_application_web>)</li></ul>
 JSPP.spaceRecover = Recover rights
+JSPP.applications.add = Add this application
