--- a/config-core/src/main/config/properties/com/silverpeas/directory/multilang/DirectoryBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/directory/multilang/DirectoryBundle_de.properties
@@ -34,3 +34,6 @@ directory.breadcrumb.3 = Kontakte von
 directory.breadcrumb.4 = Gruppen-Verzeichnis
 directory.breadcrumb.5 = Domain-Verzeichnis
 directory.breadcrumb.6 = Raum-Verzeichnis
+
+directory.query.error.title = Impossible search
+directory.query.error.msg = Characters * and ? are <b>wildcards</b>.<br/>It can not be used at the beginning of a term.<br/><br/>Please correct the query and restart your search...
