--- a/config-core/src/main/config/properties/com/silverpeas/directory/multilang/DirectoryBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/directory/multilang/DirectoryBundle_en.properties
@@ -9,3 +9,6 @@ directory.breadcrumb.3 = Contacts of
 directory.breadcrumb.4 = Directory of the group
 directory.breadcrumb.5 = Directory of the domain
 directory.breadcrumb.6 = Directory of the space
+
+directory.query.error.title = Impossible search
+directory.query.error.msg = Characters * and ? are <b>wildcards</b>.<br/>It can not be used at the beginning of a term.<br/><br/>Please correct the query and restart your search...
