--- a/config-core/src/main/config/properties/com/silverpeas/directory/multilang/DirectoryBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/directory/multilang/DirectoryBundle_fr.properties
@@ -9,3 +9,6 @@ directory.breadcrumb.3 = Contacts de
 directory.breadcrumb.4 = Annuaire du groupe
 directory.breadcrumb.5 = Annuaire du domaine
 directory.breadcrumb.6 = Annuaire de l'espace
+
+directory.query.error.title = Recherche impossible
+directory.query.error.msg = Les caractères * et ? sont des <b>caractères joker</b>.<br/>Ils ne peuvent pas être utilisés au début d'un terme.<br/><br/>Merci de corriger la requête et de relancer votre recherche...
