--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_en.properties
@@ -92,7 +92,7 @@ myContactProfile.tab.profile = Profile
 myContactProfile.tab.wall = Wall
 myContactProfile.contacts.common = common contacts
 
-profil.subnav.display=Display\:
+profil.subnav.display=Display : 
 profil.subnav.identity=Identity
 
 invitation.send = Send an invitation
