closing feature #2716 displaying sums on pages related to volumes

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_de.properties
@@ -110,8 +110,9 @@ silverStatisticsPeas.pdc.cross.select=Eine Achse ausw\u00e4hlen
 silverStatisticsPeas.pdc.error.select=W\u00e4hlen Sie bitte zwei Achsen aus.  
 silverStatisticsPeas.pdc.error.same=Sie m\u00fcssen zwei unterschiedlich ausw\u00e4hlen.
 
+silverStatisticsPeas.sums.applications = applications
+silverStatisticsPeas.sums.attachments.number = attachments
+silverStatisticsPeas.sums.attachments.size = of attachments
+silverStatisticsPeas.sums.contributions = contributions
 
-
-
-
-
+silverStatisticsPeas.volumes.tab.contributions = Contributions
