--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_fr.properties
@@ -51,7 +51,7 @@ silverStatisticsPeas.ToSpace	 	 	 = \u00E0 l'espace
 silverStatisticsPeas.JobPeas	 	 	 = Applications
 silverStatisticsPeas.SrevicesNumber	 	 = R\u00E9partition par type d'applications
 silverStatisticsPeas.InstancesNumber	 	 = Nombre d'instances
-silverStatisticsPeas.VolumeNumber	 	 = R\u00E9partition des publications
+silverStatisticsPeas.VolumeNumber	 	 = R\u00E9partition des contributions
 silverStatisticsPeas.VolumeDocsNumber	 	 = R\u00E9partition des fichiers joints
 silverStatisticsPeas.FromSpace	 	 	 = de l'espace
 silverStatisticsPeas.AttachmentsNumber	 	 = Nombre de fichiers joints
@@ -108,3 +108,10 @@ silverStatisticsPeas.pdc.cross.axis.second=Second axe
 silverStatisticsPeas.pdc.cross.select=S\u00E9lectionner un axe
 silverStatisticsPeas.pdc.error.select=Veuillez s\u00E9lectionner deux axes.
 silverStatisticsPeas.pdc.error.same=Vous devez s\u00E9lectionner deux diff\u00E9rents axes.
+
+silverStatisticsPeas.sums.applications = applications
+silverStatisticsPeas.sums.attachments.number = fichiers joints
+silverStatisticsPeas.sums.attachments.size = de fichiers joints
+silverStatisticsPeas.sums.contributions = contributions
+
+silverStatisticsPeas.volumes.tab.contributions = Contributions
