--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_en.properties
@@ -50,20 +50,20 @@ silverStatisticsPeas.ToSpace	 	 	 = to space
 silverStatisticsPeas.JobPeas	 	 	 = Applications
 silverStatisticsPeas.ServicesNumber	 	 = Type of application distribution
 silverStatisticsPeas.InstancesNumber	 	 = Application number
-silverStatisticsPeas.VolumeNumber	 	 = Publication distribution
-silverStatisticsPeas.VolumeDocsNumber	 	 = Attached file distribution
+silverStatisticsPeas.VolumeNumber	 	 = Contributions distribution
+silverStatisticsPeas.VolumeDocsNumber	 	 = Attachments distribution
 silverStatisticsPeas.FromSpace	 	 	 = from the space
-silverStatisticsPeas.AttachmentsNumber	 	 = Attached file number
-silverStatisticsPeas.AttachmentsSize	 	 = Attached file size
-silverStatisticsPeas.VolumeDocsSize	 	 = Attached file size distribution
+silverStatisticsPeas.AttachmentsNumber	 	 = Attachments number
+silverStatisticsPeas.AttachmentsSize	 	 = Attachments size
+silverStatisticsPeas.VolumeDocsSize	 	 = Attachments size distribution
 silverStatisticsPeas.Frequence	 	 	 = Frequency
-silverStatisticsPeas.AttachmentsTotalSize	 = Attached file size
-silverStatisticsPeas.EvolutionAttachmentsTotalSize = Attached file size history
+silverStatisticsPeas.AttachmentsTotalSize	 = Evolution of the size of attachments
+silverStatisticsPeas.EvolutionAttachmentsTotalSize = Attachments size history
 silverStatisticsPeas.Historique                  = History
 silverStatisticsPeas.Access                  	 = Access
 silverStatisticsPeas.EvolutionAccessDeb 	 = Access history 
 silverStatisticsPeas.EvolutionAccessSpace 	 = , space
-silverStatisticsPeas.EvolutionAccessService 	 = , application
+silverStatisticsPeas.EvolutionAccessService  = , application
 silverStatisticsPeas.EvolutionAccessGroup 	 = for the group
 silverStatisticsPeas.EvolutionAccessUser 	 = for the user
 silverStatisticsPeas.ClearUserPanelPeas 	 = Clear filter
@@ -107,3 +107,10 @@ silverStatisticsPeas.pdc.cross.axis.second=Second topic
 silverStatisticsPeas.pdc.cross.select=Select topic
 silverStatisticsPeas.pdc.error.select=Pleas select two topics
 silverStatisticsPeas.pdc.error.same=You must not select the same topics.
+
+silverStatisticsPeas.sums.applications = applications
+silverStatisticsPeas.sums.attachments.number = attachments
+silverStatisticsPeas.sums.attachments.size = of attachments
+silverStatisticsPeas.sums.contributions = contributions
+
+silverStatisticsPeas.volumes.tab.contributions = Contributions
