Feature #2786  : Integration Facebook et LinkedIN

--- a/config-core/src/main/config/properties/com/silverpeas/authentication/multilang/authentication_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/authentication/multilang/authentication_en.properties
@@ -31,6 +31,7 @@ authentication.logon.passwordForgotten = Have you forgotten your password ?
 authentication.logon.passwordRemember = Remember the password ?
 authentication.logon.loginMissing = Please enter your login
 authentication.logon.passwordReinit = Give me a new password...
+authentication.logon.socialNetworkLogin = Or connect via
 
 # login errors
 authentication.logon.1 = Login or password incorrect
