--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/multilang/graphicElementFactoryBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/multilang/graphicElementFactoryBundle_en.properties
@@ -38,3 +38,7 @@ GEF.operations.label = What do you want to do next?
 
 GEF.export.label = Export option
 GEF.export.option.csv=CSV
+
+GEF.welcome.title = Welcome !
+GEF.welcome.button.ok = OK
+GEF.welcome.button.reminder = Remind me
