Feature #2829. Now the integration of the Aurore's work with mine userpanel prototype is almost finished. Some details are on the way

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/selectionPeas/multilang/selectionPeasBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/selectionPeas/multilang/selectionPeasBundle_fr.properties
@@ -32,19 +32,19 @@ selectionPeas.helpBrowse        = Naviguer dans l'arborescence
 selectionPeas.helpSearchElement = Rechercher un utilisateur
 selectionPeas.helpSearchSet     = Rechercher un groupe
 selectionPeas.helpCart          = Afficher le panier
-selectionPeas.removeFromCart    = Supprimer les éléments sélectionnés 
-selectionPeas.removeAllFromCart = Supprimer tous les éléments
-selectionPeas.confirmRemoveFromCart    = Etes-vous sûr de vouloir supprimer les éléments sélectionnés du panier ?
-selectionPeas.confirmRemoveAllFromCart = Etes-vous sûr de vouloir supprimer tous les éléments du panier ?
+selectionPeas.removeFromCart    = Supprimer les \u00e9l\u00e9ments s\u00e9lectionn\u00e9s 
+selectionPeas.removeAllFromCart = Supprimer tous les \u00e9l\u00e9ments
+selectionPeas.confirmRemoveFromCart    = Etes-vous s\u00fbr de vouloir supprimer les \u00e9l\u00e9ments s\u00e9lectionn\u00e9s du panier ?
+selectionPeas.confirmRemoveAllFromCart = Etes-vous s\u00fbr de vouloir supprimer tous les \u00e9l\u00e9ments du panier ?
 
-selectionPeas.searchResult    = Résultat 
-selectionPeas.searchCriteres  = Critères de recherche
-selectionPeas.selectedNumber  = Eléments sélectionnés
-selectionPeas.quickSelect = Sélection rapide
+selectionPeas.searchResult    = R\u00e9sultat 
+selectionPeas.searchCriteres  = Crit\u00e8res de recherche
+selectionPeas.selectedNumber  = El\u00e9ments s\u00e9lectionn\u00e9s
+selectionPeas.quickSelect = S\u00e9lection rapide
 selectionPeas.filter = Filtre
 
-selectionPeas.selectAll = Tout sélectionner
-selectionPeas.unSelectAll = Tout désélectionner
+selectionPeas.selectAll = Tout s\u00e9lectionner
+selectionPeas.unSelectAll = Tout d\u00e9s\u00e9lectionner
 
 selectionPeas.rootName = Racine
 selectionPeas.usersAll = Utilisateurs  
@@ -56,8 +56,8 @@ selectionPeas.groupsOfUser = Groupes d'appartenance
 selectionPeas.directUsersOfGroup = Utilisateurs
 selectionPeas.groupParent = Groupe parent
 
-selectionPeas.selectedGroups = Groupes selectionnés
-selectionPeas.selectedUsers = Utilisateurs selectionnés
+selectionPeas.selectedGroups = Groupes selectionn\u00e9s
+selectionPeas.selectedUsers = Utilisateurs selectionn\u00e9s
 
 selectionPeas.domain = Domaine
 
