--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -168,6 +168,7 @@ GML.unlock					        = Entsperren
 GML.upload						= Hinaufladung
 GML.user						= Ben\u00fctzer
 GML.users						= Ben\u00fctzer
+GML.user_s                      = ben\u00fctzer
 
 GML.validate					        = Best\u00e4tigen
 GML.viewCalendar					= Kalender anzeigen
@@ -315,3 +316,8 @@ GML.Show = Zeigen:
 GML.selectAValue = Bitte w\u00e4hlen Sie einen Wert
 
 GML.Validation = Best\u00e4tigung
+GML.pagination.FirstPage=Erste Seite
+GML.pagination.LastPage=Letzte Seite
+GML.pagination.ScrollNextPages=>>
+GML.pagination.ScrollPreviousPages=<<
+GML.pagination.GoToPage=Seite
